[project]
name = "dna-serpent"
version = "0.2.1"
description = "Serpent is an exploration into DNA sequences, codons, amino acids and genome data"
authors = [
	{ name = "Peter Hillerström", email = "peter.hillerstrom@gmail.com" },
]
dependencies = [
    "Pillow==9.4.0",
    "matplotlib==3.7.0",
    "more-itertools==9.0.0",
    "numpy==1.24.2",
    "click>=8.1.3",
    "argh>=0.28.1",
    "termcolor>=2.2.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
source-includes = ["test", "CHANGELOG.md", "LICENSE", "README.md"]

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.10.0",
    "pre-commit>=3.1.1",
    "ruff>=0.0.253",
    "flake8-tabs>=2.3.2",
    "pylint>=2.16.3",
    "mypy>=1.0.1",
    "types-Pillow>=9.4.0.17",
    "pytest>=7.2.2",
]

[tool.pdm.scripts]
serpent = {call = "serpent.analyse:main"}


[tool.mypy]
files = "src"
python_version = "3.8"

# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

# Getting these passing should be easy
strict_equality = true
strict_concatenate = true

# Gradually stricter options:
check_untyped_defs = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# strict = true

show_error_codes = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_unreachable = true

# You can disable imports or control per-module/file settings here
[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
]
ignore_missing_imports = true


[tool.pylint]
py-version = "3.8"
jobs = "0"
reports.output-format = "colorized"
# Good variable names which should always be accepted
good-names = [
	"i",
	"n",
]
# good-names-rgxs="^[_a-z][_a-z0-9]?$"

[tool.pylint.messages_control]
enable = [
    "useless-suppression",
]
disable = [
    "bad-indentation",
]
